syntax = "proto3";

package actions;

service Historian {
    rpc list (Epic) returns (History);
    rpc add (CreateAction) returns (ActionId);
    rpc fetch_epics (Epic) returns (Epics);
    rpc set_annotation (Annotation) returns (ActionId);
}

message Epic {
    string name = 1;
}

message History {
    repeated Action action = 1;
}

message Action {
    uint64 id = 1;
    string kind = 2;
    string name = 3;
    string location = 4;
    string epic = 5;
    string annotation = 6;
}

message CreateAction {
    string command = 1;
    string kind = 2;
    string location = 3;
    string epic = 4;
    string host = 5;
    string executed = 6;
}

message ActionId {
    uint64 id = 1;
}

message Epics {
    repeated string name = 1;
}

message Annotation {
    uint64 id = 1;
    string annotation = 2;
}